--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -11,3 +11,11 @@ block content
         h2
           a(href='/playlist/#{playlist.id}', title='#{playlist.title}', class='playlist-title')= playlist.title
         time= playlist.created
+        if session.email
+          .item-actions
+            if parseInt(session.userId, 10) === parseInt(playlist.owner.id, 10)
+              a(href='javascript:;', class='playlist-delete', data-context='playlist-delete') delete
+            if playlist.isStarred
+              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star on', data-action='/playlist/star/', data-context='playlist-star') unstar
+            else
+              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star', data-action='/playlist/star/', data-context='playlist-star') star
