--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,8 @@ html
                 a(href='/playlists') View Playlists
               li
                 a(href='/playlist/new') Create Playlist
+              li
+                a(href='/playlists/starred') View Starred
           li
             a(href='javascript:;') You
             ul
