--- a/views/starred.jade
+++ b/views/starred.jade
@@ -1,19 +1,7 @@
 extend layout
 
 block content
-  if isOwner
-    h1 Your Playlists
-  else
-    h1= owner.username
-
-  if pageType == 'userProfile'
-    .user-info
-      if owner.location
-        p Location: #{owner.location}
-
-      if owner.website
-        p Website:&#xa0;
-          a(href='#{owner.website}', target='_blank')= owner.website
+  h1 Starred Playlists
 
   ol#playlists
     for playlist in playlists
