--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -360,6 +360,10 @@ time {
     width: 830px;
 }
 
+.page-bookmarklet .main-wrapper {
+    width: 100%;
+}
+
 .page-bookmarklet .wrapper {
     margin-top: 10px;
     padding: 15px 20px 5px 20px;
