--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
   body(style='background-image: url(#{background});', class='page-#{pageType}')
     #flash
     header
-      a(href='/', id='logo') moxboxx
+      a(href='/', id='logo', title='Home') moxboxx
 
       ul.actions
         if session.email
