--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,7 @@ extend layout
 
 block content
   h1 moxboxx
+  p.boombox
+    img(src='/images/boombox.gif')
   p.tip Share playlists
-  p Build playlists with: Youtube, Vimeo, Soundcloud, Mixcloud, Rdio
+  p Build playlists with: Youtube, Vimeo, Soundcloud
