--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,5 +40,11 @@ html
         block content
     #footer
 
-    script(src='https://login.persona.org/include.js', type='text/javascript')
+    script(src='https://login.persona.org/include.js')
+    script(src='/javascripts/popcorn.js')
+    script(src='/javascripts/popcorn._MediaElementProto.js')
+    script(src='/javascripts/popcorn.soundcloud.js')
+    script(src='/javascripts/popcorn.vimeo.js')
+    script(src='/javascripts/popcorn.youtube.js')
+    script(src='/javascripts/require.js', data-main='/javascripts/main')
     script(src='/javascripts/require.js', data-main='/javascripts/main')
