--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,4 +41,8 @@ html
     #footer
 
     script(src='https://login.persona.org/include.js', type='text/javascript')
+    script(src='http://www.youtube.com/player_api')
+    script(src='/javascripts/yt.js')
+    script(src='/javascripts/froogaloop.js')
+    script(src='//connect.soundcloud.com/sdk.js')
     script(src='/javascripts/require.js', data-main='/javascripts/main')
