--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,5 +44,5 @@ html
     script(src='http://www.youtube.com/player_api')
     script(src='/javascripts/yt.js')
     script(src='/javascripts/froogaloop.js')
-    script(src='//connect.soundcloud.com/sdk.js')
+    script(src='/javascripts/sc.js')
     script(src='/javascripts/require.js', data-main='/javascripts/main')
