removed unused file

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,7 +42,9 @@ html
 
     script(src='https://login.persona.org/include.js', type='text/javascript')
     script(src='http://www.youtube.com/player_api')
-    script(src='/javascripts/yt.js')
     script(src='/javascripts/froogaloop.js')
     script(src='/javascripts/sc.js')
+    script(type='text/javascript')
+      var videoList = [];
+      var currentPlay;
     script(src='/javascripts/require.js', data-main='/javascripts/main')
