--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,6 +39,7 @@ html
       .wrapper
         block content
     #footer
+      block footer
 
     script(src='https://login.persona.org/include.js', type='text/javascript')
     script(src='http://www.youtube.com/player_api')
