switching to mysql

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
             a(href='javascript:;') Playlists
             ul
               li
-                a(href='/playlists') View Playlists
+                a(href='/user/#{session.userId}') View Playlists
               li
                 a(href='/playlist/new') Create Playlist
               li
