--- a/views/profile.jade
+++ b/views/profile.jade
@@ -3,6 +3,13 @@ extend layout
 block content
   h1 Edit your profile
 
+  if gravatar
+    #gravatar-wrapper
+      img(src='#{gravatar}', id="gravatar-profile")
+      p.gravatar.tip
+        span Update your&#xa0;
+        a(href='http://gravatar.com', target='_blank') gravatar
+
   form(method='post', action='/profile', id='profile-edit')
     label(for='username', class='tip') Username*
     input(type='text', name='username', placeholder='Username', value='#{session.username || ''}')
