--- a/views/playlist.jade
+++ b/views/playlist.jade
@@ -26,6 +26,16 @@ block content
           else
             a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star', data-action='/playlist/star/', data-context='playlist-star') star
 
+      if playlist.starredBy.length > 0
+        #starred
+          h3 Starred By
+          ul
+            for user in playlist.starredBy
+              li
+                a(href='/user/#{user.id}', title="#{user.username}")
+                  img(src='#{user.gravatar}')
+
+
     .mox-items
       if session.email && isOwner
         #add-track
