--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,3 +1,24 @@
+mixin playlist(playlists, owner)
+  ol#playlists
+    for playlist in playlists
+      li(data-id='#{playlist.id}', data-action='/playlist/', class='item')
+        a(href='/user/#{owner.id}')
+          img(src='#{owner.gravatar}', title="#{owner.username}")
+        h2
+          a(href='/playlist/#{playlist.id}', title='#{playlist.title}', class='playlist-title')
+            = playlist.title
+            span.count #{playlist.moxes.length}
+        time= playlist.created
+
+        if session.email
+          .item-actions
+            if parseInt(session.userId, 10) === parseInt(owner.id, 10)
+              a(href='javascript:;', class='playlist-delete', data-context='playlist-delete') delete
+            if playlist.isStarred
+              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star on', data-action='/playlist/star/', data-context='playlist-star') unstar
+            else
+              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star', data-action='/playlist/star/', data-context='playlist-star') star
+
 !!! 5
 html
   head
