fix gravatar reference

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,9 @@
-mixin playlist(playlists, owner)
+mixin playlist(playlists)
   ol#playlists
     for playlist in playlists
       li(data-id='#{playlist.id}', data-action='/playlist/', class='item')
-        a(href='/user/#{owner.id}')
-          img(src='#{owner.gravatar}', title="#{owner.username}")
+        a(href='/user/#{playlist.owner.id}')
+          img(src='#{playlist.owner.gravatar}', title="#{playlist.owner.username}")
         h2
           a(href='/playlist/#{playlist.id}', title='#{playlist.title}', class='playlist-title')
             = playlist.title
@@ -12,7 +12,7 @@ mixin playlist(playlists, owner)
 
         if session.email
           .item-actions
-            if parseInt(session.userId, 10) === parseInt(owner.id, 10)
+            if parseInt(session.userId, 10) === parseInt(playlist.owner.id, 10)
               a(href='javascript:;', class='playlist-delete', data-context='playlist-delete') delete
             if playlist.isStarred
               a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star on', data-action='/playlist/star/', data-context='playlist-star') unstar
