--- a/views/playlists.jade
+++ b/views/playlists.jade
@@ -15,4 +15,4 @@ block content
         p Website:&#xa0;
           a(href='#{owner.website}', target='_blank')= owner.website
 
-  mixin playlist(playlists, owner)
+  mixin playlist(playlists)
