--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -498,7 +498,6 @@ time {
 
 #playlists li h2 {
     margin-bottom: 0;
-    padding-top: 10px;
 }
 
 #playlists li .item-actions {
@@ -508,7 +507,7 @@ time {
 #playlists > li a.playlist-title {
     display: block;
     line-height: 35px;
-    padding-left: 10px;
+    padding: 10px;
     text-overflow: ellipsis;
 }
 
