--- a/views/layout.jade
+++ b/views/layout.jade
@@ -71,6 +71,7 @@ html
         block content
     #footer
       block footer
+      a(href='http://noodleindustries.com', target='_blank', id="noodle-logo") Noodle Industries
 
     script(src='https://login.persona.org/include.js', type='text/javascript')
     script(src='http://www.youtube.com/player_api')
