--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,7 @@ html
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='icon', type='image/gif', href='/favicon.gif')
     script(type='text/javascript')
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-4319539-42']);
