--- a/views/starred.jade
+++ b/views/starred.jade
@@ -3,19 +3,4 @@ extend layout
 block content
   h1 Starred Playlists
 
-  ol#playlists
-    for playlist in playlists
-      li(data-id='#{playlist.id}', data-action='/playlist/', class='item')
-        a(href='/user/#{playlist.owner.id}')
-          img(src='#{playlist.owner.gravatar}')
-        h2
-          a(href='/playlist/#{playlist.id}', title='#{playlist.title}', class='playlist-title')= playlist.title
-        time= playlist.created
-        if session.email
-          .item-actions
-            if parseInt(session.userId, 10) === parseInt(playlist.owner.id, 10)
-              a(href='javascript:;', class='playlist-delete', data-context='playlist-delete') delete
-            if playlist.isStarred
-              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star on', data-action='/playlist/star/', data-context='playlist-star') unstar
-            else
-              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star', data-action='/playlist/star/', data-context='playlist-star') star
+  mixin playlist(playlists)
