--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -180,6 +180,10 @@ form button {
     clear: both;
 }
 
+#new-playlist input[type="text"], #edit-playlist-title input[type="text"] {
+    width: 800px;
+}
+
 .tip {
     background-color: #fdff7d;
 }
@@ -495,9 +499,11 @@ time {
 }
 
 #playlist-title > span.description {
+    display: block;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 17px;
-    line-height: 19px;
+    line-height: 22px;
+    margin-top: 10px;
     text-transform: none;
 }
 
@@ -624,8 +630,8 @@ time {
 
 #playlists li.item h2 .description {
     color: #333;
-    font-size: 17px;
-    line-height: 19px;
+    font-size: 16px;
+    line-height: 20px;
     padding: 0 10px 10px 10px;
 }
 
