added titles and fixed mox

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,7 +28,9 @@ mixin playlist(playlists)
 !!! 5
 html
   head
-    title moxboxx
+    title
+      = 'moxboxx'
+      block title
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
