display delete in view

--- a/views/playlist.jade
+++ b/views/playlist.jade
@@ -25,6 +25,8 @@ block content
 
       if session.email
         .item-actions
+          if isOwner
+            a(href='javascript:;', data-id='#{playlist.id}', class='playlist-delete', data-action='/playlist/', data-context='playlist-delete-detail') delete
           if playlist.isStarred
             a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star on', data-action='/playlist/star/', data-context='playlist-star') unstar
           else
